add k8s client
